WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57790
Renamed clearWeakPointers => updateWeakHandles and removed misleading comment
https://bugs.webkit.org/show_bug.cgi?id=57790
Summary
Renamed clearWeakPointers => updateWeakHandles and removed misleading comment
Geoffrey Garen
Reported
2011-04-04 14:30:54 PDT
Renamed clearWeakPointers => updateWeakHandles and removed misleading comment
Attachments
Patch
(2.89 KB, patch)
2011-04-04 14:32 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Trying a build fix
(3.22 KB, patch)
2011-04-04 16:38 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-04-04 14:32:22 PDT
Created
attachment 88131
[details]
Patch
Geoffrey Garen
Comment 2
2011-04-04 14:40:18 PDT
Committed
r82875
: <
http://trac.webkit.org/changeset/82875
>
WebKit Review Bot
Comment 3
2011-04-04 15:29:41 PDT
http://trac.webkit.org/changeset/82875
might have broken GTK Linux 32-bit Release
Hajime Morrita
Comment 4
2011-04-04 16:38:31 PDT
Created
attachment 88156
[details]
Trying a build fix
David Levin
Comment 5
2011-04-06 08:32:41 PDT
Comment on
attachment 88156
[details]
Trying a build fix It looks like this has been landed. Clearing r?.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug