2011-04-04  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Oliver Hunt.

        Renamed clearWeakPointers => updateWeakHandles and removed misleading comment
        https://bugs.webkit.org/show_bug.cgi?id=57790

        * collector/handles/HandleHeap.cpp:
        (JSC::HandleHeap::updateWeakHandles): Updated for rename.

        * collector/handles/HandleHeap.h: Removed comment claiming that this
        function should only be called during teardown, because it's actually
        called after every GC pass.

        * runtime/Heap.cpp:
        (JSC::Heap::destroy):
        (JSC::Heap::markRoots): Updated for rename.


Canonical link: https://commits.webkit.org/72659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82875 268f45cc-cd09-0410-ab3c-d52691b4dbfc